re-advisor/re-advisor-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: re-advisor-httproute
  namespace: re-advisor
spec:
  parentRefs:
  - name: lab-gateway
    namespace: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /re-advisor
    backendRefs:
    - name: real-estate-open-webui
      port: 80
