re-advisor/real-estate-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: re-advisor-route
  namespace: real-estate
spec:
  parentRefs:
  - name: lab-gateway
    namespace: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /re-advisor
    backendRefs:
    - name: real-estate-open-webui
      port: 80
